[tool.poetry]
name = "repdf"
version = "0.1.0"
description = ""
authors = ["yanbaru1331 <tippu0003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pdf2image = "^1.16.3"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
